--- a/future.html
+++ b/future.html
@@ -28,7 +28,7 @@
 Love You Sooo Much Babyyy My Wife 😘😘😘❤️❤️.</h5>
 </div>
 <div class="col-lg-6 embed-responsive embed-responsive-16by9 vid">
-<iframe class="embed-responsive-item " src="images/vid.mp4" allowfullscreen></iframe>
+<iframe class="embed-responsive-item " src="images/vid.mp4" allowfullscreen autoplay="false"></iframe>
 </div>
 </div>
 
@@ -38,18 +38,18 @@ Love You Sooo Much Babyyy My Wife 😘😘😘❤️❤️.</h5>
 <div class=" carousel-inner">
   <div class=" carousel-item container-fluid active">
     <div class="vids col-lg-6 embed-responsive embed-responsive-16by9 vid">
-    <iframe class="embed-responsive-item " src="images/vid1.mp4" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item " src="images/vid1.mp4" allowfullscreen autoplay="false"></iframe>
     </div>
   </div>
   <div class=" carousel-item container-fluid">
     <div class="vids col-lg-6 embed-responsive embed-responsive-16by9 vid">
-    <iframe class="embed-responsive-item " src="images/vid2.mp4" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item " src="images/vid2.mp4" allowfullscreen autoplay="false"></iframe>
     </div>
   </div>
 
   <div class=" carousel-item container-fluid">
     <div class="vids col-lg-6 embed-responsive embed-responsive-16by9 vid">
-    <iframe class="embed-responsive-item " src="images/vid3.mp4" allowfullscreen></iframe>
+    <iframe class="embed-responsive-item " src="images/vid3.mp4" allowfullscreen autoplay="false"></iframe>
     </div>
   </div>
 
