--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
      </nav>
 
+
      <div class="row">
     <div class="col-lg-6 intro">
       <h1 class="big-heading">TEHREEM FOR LIFE</h1>
@@ -51,8 +52,12 @@
       <img class="title-image" src="images/11.jpg" >
     </div>
     </div>
+  </section>
+
 
     <section class="colored-section" id="testimonials">
+
+    <div class="container-fluid">
       <h2 class="testimonial-text">SOME BEAUTIFUL PICS OF MY LOVE 👇</h2>
       <div id="testimonials-carousel" class="carousel slide" data-ride="false">
     <div class="carousel-inner">
@@ -82,6 +87,7 @@
   </div>
 
   <h1 class="footer-text">❤ ❤ I LOVE YOU BABYY ❤ ❤ </h1>
+</section>
 
   </body>
 </html>
