--- a/future.html
+++ b/future.html
@@ -18,6 +18,7 @@
 
 
 
+<div class="future">
 
 <div class="row">
 <div class="col-lg-6 intro">
@@ -27,29 +28,30 @@
 <h5>Meri jaaaan apko hamesha khush rakhounga bs bht jld araha houn apko lenay 🙈
 Love You Sooo Much Babyyy My Wife 😘😘😘❤️❤️.</h5>
 </div>
-<div class="col-lg-6 embed-responsive embed-responsive-16by9 vid">
-<iframe class="embed-responsive-item " src="images/vid.mp4" allowfullscreen autoplay="false"></iframe>
+<div class="video col-lg-6 embed-responsive embed-responsive-16by9 vid">
+<iframe class=" embed-responsive-item " src="images/vid.mp4" allowfullscreen autoplay="false"></iframe>
 </div>
 </div>
 
 <section class="colored-section" id="testimonials">
   <h2 class="testimonial-text2">KUCH HASEEN VIDEOS MERI JAAN KI 👇 </h2>
+
   <div id="testimonials-carousel" class="carousel slide" data-ride="false">
 <div class=" carousel-inner">
   <div class=" carousel-item container-fluid active">
-    <div class="vids col-lg-6 embed-responsive embed-responsive-16by9 vid">
-    <iframe class="embed-responsive-item " src="images/vid1.mp4" allowfullscreen autoplay="false"></iframe>
+    <div class="vids  col-lg-6 embed-responsive embed-responsive-16by9 vid">
+    <iframe class=" embed-responsive-item " src="images/vid1.mp4" allowfullscreen autoplay="false"></iframe>
     </div>
   </div>
   <div class=" carousel-item container-fluid">
-    <div class="vids col-lg-6 embed-responsive embed-responsive-16by9 vid">
-    <iframe class="embed-responsive-item " src="images/vid2.mp4" allowfullscreen autoplay="false"></iframe>
+    <div class="vids  col-lg-6 embed-responsive embed-responsive-16by9 vid">
+    <iframe class=" embed-responsive-item " src="images/vid2.mp4" allowfullscreen autoplay="false"></iframe>
     </div>
   </div>
 
   <div class=" carousel-item container-fluid">
-    <div class="vids col-lg-6 embed-responsive embed-responsive-16by9 vid">
-    <iframe class="embed-responsive-item " src="images/vid3.mp4" allowfullscreen autoplay="false"></iframe>
+    <div class="vids  col-lg-6 embed-responsive embed-responsive-16by9 vid">
+    <iframe class=" embed-responsive-item " src="images/vid3.mp4" allowfullscreen autoplay="false"></iframe>
     </div>
   </div>
 
@@ -63,6 +65,8 @@ Love You Sooo Much Babyyy My Wife 😘😘😘❤️❤️.</h5>
   <span class="carousel-control-next-icon" aria-hidden="true"></span>
   <span class="sr-only">Next</span>
 </a>
+</div>
+
 </div>
   </body>
 </html>
