--- a/sachai.html
+++ b/sachai.html
@@ -16,6 +16,7 @@
 </head>
   <body>
 
+<div class="future">
 
 <div class="row">
 <div class="col-lg-6 intro">
@@ -27,7 +28,7 @@ Allah ka jitna shukr kroun k us ny ap meray naseeb m likhdi hain km hai meri jaa
 Ap sy bht bht bht Mubht ha meri jaan</h5>
 </div>
 <div class="col-lg-6">
- <img class="title-image2" src="images/1.jpg" >
+ <img class=" title-image2" src="images/1.jpg" >
 
 </div>
 </div>
@@ -35,5 +36,6 @@ Ap sy bht bht bht Mubht ha meri jaan</h5>
   <img class="tt" src="images/5.jpg" alt="">
 </div>
 
+</div>
   </body>
 </html>
