--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
        <ul class="navbar-nav ml-auto">
          <li class="nav-item">
+           <a class="nav-link" href="index.html">Home</a>
+         </li>
+         <li class="nav-item">
            <a class="nav-link" href="sachai.html">Apki_Sachai</a>
          </li>
          <li class="nav-item">
