--- a/sachai.html
+++ b/sachai.html
@@ -15,7 +15,31 @@
 
 </head>
   <body>
+    <div class="container-fluid">
+      <!-- Nav Bar -->
+      <nav class="dd  navbar navbar-expand-lg navbar-dark ">
 
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+       </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sachai.html">Apki_Sachai</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link"  href="future.html">My Future</a>
+          </li>
+
+        </ul>
+      </div>
+
+      </nav>
+      
 <div class="future">
 
 <div class="row">
